added page layout in html

--- a/index.html
+++ b/index.html
@@ -15,21 +15,43 @@
 <div class="container">
     <div class="row">
         <div class="col-12 text-center pt-2 pb-4">
-         <img src="https://via.placeholder.com/720x100"/>
+         <img src="https://via.placeholder.com/720x100" class="img-fluid"/>
         </div>
     </div>
 
     <div>
         <div class="row">
-            <div class="col-6 border text-center">
-                left column
+            <!-- blank div for spacing -->
+            <div class="col-2"></div>
+
+
+            <div class="col-4 border text-center">
+                [picture, or something]
+            </div>
+
+            <div class="col-4 border text-center">
+                <p>Press any key to start!</p>
+                <p>Wins
+                    <span id="wins"></span>
+                </p>
+                <p>Current Word
+                    <span id="current-word"></span>
+                </p>
+
+                <p>Number of guesses remaining
+                    <span id="guesses-remaing"></span>
+                </p>
+
+                <p>Letters Guessed
+                    <span id="guesses-so-far"></span>
+                </p>
 
             </div>
 
-            <div class="col-6 border text-center">
-                right column
 
-            </div>
+            <!-- blank div for spacing -->
+            <div class="col-2"></div>
+
 
         </div>
 
