added initital vars and onkey up function to register and store user key strokes

--- a/index.html
+++ b/index.html
@@ -24,26 +24,27 @@
             <!-- blank div for spacing -->
             <div class="col-2"></div>
 
-
+             <!-- main page content -->
             <div class="col-4 border text-center">
                 [picture, or something]
             </div>
 
             <div class="col-4 border text-center">
+
                 <p>Press any key to start!</p>
                 <p>Wins
-                    <span id="wins"></span>
+                    <br><span id="wins"></span>
                 </p>
                 <p>Current Word
-                    <span id="current-word"></span>
+                    <br><span id="current-word"></span>
                 </p>
 
                 <p>Number of guesses remaining
-                    <span id="guesses-remaing"></span>
+                    <br><span id="guesses-remaining"></span>
                 </p>
 
                 <p>Letters Guessed
-                    <span id="guesses-so-far"></span>
+                    <br><span id="user-guesses"></span>
                 </p>
 
             </div>
